<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2.60dp"
    android:id="@+id/product_main_id">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/product_image_description"
            android:src="@drawable/vegetable"
            android:background="@drawable/bg_category" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:layout_marginTop="6.50dp"
            android:gravity="center"
            android:ellipsize="end"
            android:textSize="14.00sp"
            android:textColor="@color/black"
            android:text="Product Name"
            android:contentDescription="@string/product_name_description"/>

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:ellipsize="end"
            android:textSize="14.00sp"
            android:textColor="@color/black"
            android:text="Price"
            android:contentDescription="@string/product_price_description"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Add"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
