<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriesFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/app_bar_custom_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/lightyellow"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                android:contentDescription="@string/toolbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/blinkit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="blinkit"
                            android:textSize="20sp"
                            android:textColor="@android:color/black"
                            android:contentDescription="@string/blinkit_text"/>

                        <TextView
                            android:id="@+id/inTenMinutes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="in 10 minutes"
                            android:textColor="@android:color/black"
                            android:textSize="30sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/profile_icon_description"
                        android:src="@drawable/profile_icon"
                        android:padding="4dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:layout_collapseMode="parallax"/>
                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/searchCv"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:layout_collapseMode="pin">

                    <TextView
                        android:id="@+id/searchEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="10dp"
                        android:hint="Search"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:textColorHint="@color/black"
                        android:contentDescription="@string/search_description"
                        app:drawableStartCompat="@drawable/search_icon"/>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:contentDescription="@string/nested_scroll_view_description">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp">

            <!-- Grocery and Kitchen Category -->
            <LinearLayout
                android:id="@+id/categorylist1"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/categorytext1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="Grocery and Kitchen"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColorHint="@color/black"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategory1"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="1dp"
                app:layout_constraintTop_toBottomOf="@id/categorylist1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4" />

            <!-- Snacks and Drinks Category -->
            <LinearLayout
                android:id="@+id/categorylist2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvCategory1">

                <TextView
                    android:id="@+id/categorytext2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="Snacks and Drinks"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColorHint="@color/black"/>
            </LinearLayout>

            <!-- Beauty -->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategory2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginHorizontal="1dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categorylist2"
                app:layout_constraintVertical_bias="0.0"
                app:spanCount="4" />

            <LinearLayout
                android:id="@+id/categorylist3"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvCategory2">

                <TextView
                    android:id="@+id/categorytext3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="Beauty"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColorHint="@color/black"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategory3"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginHorizontal="1dp"
                app:layout_constraintTop_toBottomOf="@id/categorylist3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
